v0.2 релиз * Переход на spring boot * Начальная форма платежа * Сохранение персональных данных * Формирование подписки * Отслеживание транзакций